# serializer version: 1
# name: test_switch[None-amax_3000][switch.main_door_locked-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.main_door_locked',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Locked',
    'platform': 'bosch_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'locked',
    'unique_id': '01JQ917ACKQ33HHM7YCFXYZX51_door_1_locked',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch[None-amax_3000][switch.main_door_locked-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Main Door Locked',
    }),
    'context': <ANY>,
    'entity_id': 'switch.main_door_locked',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch[None-amax_3000][switch.main_door_momentarily_unlocked-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.main_door_momentarily_unlocked',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Momentarily unlocked',
    'platform': 'bosch_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'cycling',
    'unique_id': '01JQ917ACKQ33HHM7YCFXYZX51_door_1_cycling',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch[None-amax_3000][switch.main_door_momentarily_unlocked-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Main Door Momentarily unlocked',
    }),
    'context': <ANY>,
    'entity_id': 'switch.main_door_momentarily_unlocked',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch[None-amax_3000][switch.main_door_secured-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.main_door_secured',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Secured',
    'platform': 'bosch_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'secured',
    'unique_id': '01JQ917ACKQ33HHM7YCFXYZX51_door_1_secured',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch[None-amax_3000][switch.main_door_secured-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Main Door Secured',
    }),
    'context': <ANY>,
    'entity_id': 'switch.main_door_secured',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch[None-amax_3000][switch.output_a-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.output_a',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'bosch_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01JQ917ACKQ33HHM7YCFXYZX51_output_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch[None-amax_3000][switch.output_a-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Output A',
    }),
    'context': <ANY>,
    'entity_id': 'switch.output_a',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch[None-b5512][switch.main_door_locked-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.main_door_locked',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Locked',
    'platform': 'bosch_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'locked',
    'unique_id': '1234567890_door_1_locked',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch[None-b5512][switch.main_door_locked-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Main Door Locked',
    }),
    'context': <ANY>,
    'entity_id': 'switch.main_door_locked',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch[None-b5512][switch.main_door_momentarily_unlocked-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.main_door_momentarily_unlocked',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Momentarily unlocked',
    'platform': 'bosch_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'cycling',
    'unique_id': '1234567890_door_1_cycling',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch[None-b5512][switch.main_door_momentarily_unlocked-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Main Door Momentarily unlocked',
    }),
    'context': <ANY>,
    'entity_id': 'switch.main_door_momentarily_unlocked',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch[None-b5512][switch.main_door_secured-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.main_door_secured',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Secured',
    'platform': 'bosch_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'secured',
    'unique_id': '1234567890_door_1_secured',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch[None-b5512][switch.main_door_secured-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Main Door Secured',
    }),
    'context': <ANY>,
    'entity_id': 'switch.main_door_secured',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch[None-b5512][switch.output_a-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.output_a',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'bosch_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1234567890_output_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch[None-b5512][switch.output_a-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Output A',
    }),
    'context': <ANY>,
    'entity_id': 'switch.output_a',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch[None-solution_3000][switch.main_door_locked-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.main_door_locked',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Locked',
    'platform': 'bosch_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'locked',
    'unique_id': '01JQ917ACKQ33HHM7YCFXYZX51_door_1_locked',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch[None-solution_3000][switch.main_door_locked-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Main Door Locked',
    }),
    'context': <ANY>,
    'entity_id': 'switch.main_door_locked',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch[None-solution_3000][switch.main_door_momentarily_unlocked-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.main_door_momentarily_unlocked',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Momentarily unlocked',
    'platform': 'bosch_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'cycling',
    'unique_id': '01JQ917ACKQ33HHM7YCFXYZX51_door_1_cycling',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch[None-solution_3000][switch.main_door_momentarily_unlocked-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Main Door Momentarily unlocked',
    }),
    'context': <ANY>,
    'entity_id': 'switch.main_door_momentarily_unlocked',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch[None-solution_3000][switch.main_door_secured-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.main_door_secured',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Secured',
    'platform': 'bosch_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'secured',
    'unique_id': '01JQ917ACKQ33HHM7YCFXYZX51_door_1_secured',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch[None-solution_3000][switch.main_door_secured-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Main Door Secured',
    }),
    'context': <ANY>,
    'entity_id': 'switch.main_door_secured',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch[None-solution_3000][switch.output_a-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.output_a',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'bosch_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01JQ917ACKQ33HHM7YCFXYZX51_output_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch[None-solution_3000][switch.output_a-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Output A',
    }),
    'context': <ANY>,
    'entity_id': 'switch.output_a',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
